# python-clean-architecture

./: .gitignore  LICENSE  pyproject.toml
app/: cpf_validator.py  entity.py
src/: coupon.py  freight.py  item.py  order.py  order_item.py  product.py
src/application/dto/: place_freight_input.py  place_order_input.py  place_order_output.py
src/application/usecase/: place_freight.py  place_order.py
src/domain/entity/: coupon.py  cpf.py  order.py  order_code.py
src/domain/repository/: item_repository.py  order_repository.py
src/infra/repository/memory/: item_repository_memory.py  order_repository_memory.py
test/: test_coupon.py  test_cpf.py  test_freight.py  test_item.py  test_order.py  test_order_item.py
test/integration/: test_place_freight.py  test_place_order.py
test/unit/: test_coupon.py  test_cpf.py  test_item.py  test_order.py  test_order_code.py  test_order_item.py
