[tool.poetry]
name = "python-clean-architecture"
version = "0.1.0"
description = ""
authors = ["fredsonchaves07 <fredsonchaves07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.7"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.9b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
